--- a/src/styles/common/iconfont/_font.scss
+++ b/src/styles/common/iconfont/_font.scss
@@ -15,6 +15,7 @@
 }
 
 .ov-icon {
+    display: inline-block;
     font-family: $icons-font-family !important;
     font-size: 16px;
     font-style: normal;
