--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -24,6 +24,7 @@ $collapse-prefix-cls: #{$css-prefix}collapse;
     // }
 
     & > &-item{
+        transition: $transition-time all ease-in-out;
         border-top: 1px solid $border-color-base;
         &:first-child {
             border-top: 0;
@@ -53,16 +54,6 @@ $collapse-prefix-cls: #{$css-prefix}collapse;
             }
         }
     }
-    // &  > &-item&-item-active > &-header{
-    //     border-bottom: 1px solid $border-color-base;
-    // }
-    // &-simple > &-item&-item-active > &-header{
-    //     border-bottom: 1px solid transparent;
-    // }
-    // &  > &-item&-item-active > &-header > i{
-    //     transform: rotate(90deg);
-    // }
-
     &-content{
         color: $text-color;
         padding: 0 16px;
